--- a/_css/survey.css
+++ b/_css/survey.css
@@ -1,24 +1,54 @@
- .sub {
-    text-align: center;
-    padding-top: 10px;
+.article {
+border-width: 0.25em;
+border-style: solid;
+	border-color: black;
+	width: 50em;
+		padding-top: 10px;
 	padding-bottom: 10px;
-    padding-left: 20px;
-	color:white;
-	margin: 0 auto;
 	box-sizing:border-box;
-	border: 1px solid black;
+	border: 2px solid black;
+	color:white;
+	margin-bottom: 30px;
+	
+}
+.green {
+background-color:rgba(65,173,72,1);
+width: 50em;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	box-sizing:border-box;
+	
+	margin: 30px 250px;
+}
+#comp{
+background-color:rgba(204,51,255,.5);
+text-align:center;
+}
+#first{
+    display: none;
+}	
+#second{
+display: none;
+}
+#third{
+display: none;
+}
+/* unvisited link */
+a:link {
+    color: white
 }
 
-#submit {
-    background: green;
-   font-size:1.25em;
+/* visited link */
+a:visited {
+    color: rgba(204,51,255,.5);
 }
 
-#submitbutton{
-    border:none;
-    background: purple;
-    padding: 0.5em 0 0 0;
-    text-align: center;
+/* mouse over link */
+a:hover {
+    color: grey;
 }
 
-href{}
+/* selected link */
+a:active {
+    color: purple;
+}
