--- a/_css/survey.css
+++ b/_css/survey.css
@@ -1,4 +1,4 @@
-.article {
+#article {
 border-width: 0.25em;
 border-style: solid;
 	border-color: black;
@@ -9,30 +9,26 @@ border-style: solid;
 	border: 2px solid black;
 	color:white;
 	margin-bottom: 30px;
+    text-align: center;
+    
 	
 }
-.green {
-background-color:rgba(65,173,72,1);
-width: 50em;
-	padding-top: 10px;
+div{
+    color:white;
+text-align: center;
+}
+fieldset{
+    	padding-top: 10px;
 	padding-bottom: 10px;
-	box-sizing:border-box;
+    margin-left: 150px;
 	
-	margin: 30px 250px;
+	width: 50em;
+	color:white;
+	margin-bottom: 30px;
+    text-align: center;
 }
-#comp{
-background-color:rgba(204,51,255,.5);
-text-align:center;
-}
-#first{
-    display: none;
-}	
-#second{
-display: none;
-}
-#third{
-display: none;
-}
+
+
 /* unvisited link */
 a:link {
     color: white
